not ready to launch. draft of front page with 3 column format. spacing and rescaling issues, working buttons

--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -53,17 +53,7 @@ small,
 .small {
   font-size: 0.8rem;
 }
-.carousel-caption {
-  position: absolute;
-  right: ((100% - $carousel-caption-width) / 2);
-  bottom: 20px;
-  //left: ((100% - $carousel-caption-width) / 2);
-  z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: $carousel-caption-color;
-  text-align: left;
-}
+
 // List in descending order to prevent extra sort function
 $type-levels: 6, 5, 4, 3, 2, 1;
 
